--- a/_pages/articles.html
+++ b/_pages/articles.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Articles
+title: Blog Archive
 permalink: /articles/
 ---
 {% for post in site.posts  %}
@@ -9,11 +9,13 @@ permalink: /articles/
 
     {% if forloop.first %}
         <h2 class="c-archives__year" id="{{ this_year }}-ref">{{this_year}}</h2>
-        <ul class="c-archives__list">
+        <ul class="list pa0">
     {% endif %}
-        <li class="c-archives__item">
-            <h3><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></h3>
-            <p>{{ post.date | date: "%b %-d, %Y" }}</p>
+        <li class="mv2">
+            <a href="{{ site.url }}{{ post.url }}" class="db pv1 link blue hover-mid-gray">
+                <time class="fr silver ttu">{{ post.date | date_to_string }} </time>
+                {{ post.title }}
+            </a>
         </li>
     {% if forloop.last %}
         </ul>
@@ -21,7 +23,7 @@ permalink: /articles/
         {% if this_year != next_year %}
         </ul>
         <h2 class="c-archives__year" id="{{ next_year }}-ref">{{next_year}}</h2>
-        <ul class="c-archives__list">
+        <ul class="list pa0">
         {% endif %}
     {% endif %}
 {% endfor %}
